--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
 				<h3>ERES IX Organizers</h3>
 				<ul>
 				  <li>Chris O&#8217;Connor (Cornell; LOC chair)</li>
-				  
-				  
 				  <li>Jonas Biren (Cornell)</li>
+				  <li>L&#237;gia Fonseca Coelho (Cornell)</li>
 				  <li>Trevor Foote (Cornell)</li>
 				  <li>An Foster (Cornell)</li>
-				  <li>L&#237;gia Fonseca Coelho (Cornell)</li>
 				  <li>Veronica Hegelein (Cornell)</li>
 				  <li>Maura Lally (Cornell)</li>
 				  <li>Adam Langeveld (Cornell)</li>
+				  <li>JT Laune (Cornell)</li>
 				  <li>Garrett Levine (Yale; past LOC chair)</li>
 				  <li>Rixin Li (UC Berkeley)</li>
 				  <li>Darryl Seligman (Cornell)</li>
