Updated OC list again

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 				  <li>Garrett Levine (Yale; past LOC chair)</li>
 				  <li>Rixin Li (UC Berkeley)</li>
 				  <li>Darryl Seligman (Cornell)</li>
-				  <!--<li>Lisa Kaltenegger (Cornell; faculty advisor)</li>
-				  <li>Nikole Lewis (Cornell; faculty advisor)</li>
-				  <li>Lynda Sovocool (CCAPS Interim Associate Director / Interim Astronomy Department Manager)</li> -->
+				  <li>Lisa Kaltenegger (Cornell)</li>
+				  <li>Nikole Lewis (Cornell)</li>
+				  <li>Lynda Sovocool (Cornell)</li>
 				</ul>
 			    
 			  </div>
