Linked registration form

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 			    <h1>Emerging Researchers in Exoplanet Science Symposium IX</h1>
 			    <h2>Cornell University, Ithaca, New York</h2>
 			    <h2>2024 July 10-12</h2>
-			    <p>Registration will begin in March.</p>
+			    <p>Registration open from March 1 to April 12.</p>
 			    <ul class="actions">
 				<!--<li>
 				  <a href="#logistics" class="button scrolly"> Logistics</a>
 				</li>-->
 				<li>
-				  <a href="#register" class="button scrolly">Registration Form (coming soon!)</a>
+				  <a href="https://docs.google.com/forms/d/e/1FAIpQLSezAWZA57JdK54Ju6seXCOnT_sfUjLRJodYjzjDWUhQ1jYXEQ/viewform?usp=sharing" class="button scrolly">Register Now!</a>
 				</li>
 			    </ul>
 			    <span clas=="image fit">
@@ -81,10 +81,10 @@
 				<h3>ERES IX Organizers</h3>
 				<ul>
 				  <li>Chris O&#8217;Connor (Cornell; LOC chair)</li>
+				  <li>An Foster (Cornell; SOC chair)</li>
 				  <li>Jonas Biren (Cornell)</li>
-				  <li>L&#237;gia Fonseca Coelho (Cornell)</li>
+				  <li>L&#237;gia F. Coelho (Cornell)</li>
 				  <li>Trevor Foote (Cornell)</li>
-				  <li>An Foster (Cornell)</li>
 				  <li>Veronica Hegelein (Cornell)</li>
 				  <li>Maura Lally (Cornell)</li>
 				  <li>Adam Langeveld (Cornell)</li>
