Updated form, deadline; added FAQs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			    <h2>Cornell University, Ithaca, New York</h2>
 			    <h2>2024 July 10-12</h2>
 			    <br>
-			    <h3>Registration open March 1 through April 19.</h3>
+			    <h3>Registration and abstract submission open through April 12.</h3>
 			    <ul class="actions">
 				<!--<li>
 				  <a href="#logistics" class="button scrolly"> Logistics</a>
