--- a/index.html
+++ b/index.html
@@ -97,13 +97,24 @@
 				  <li>Rixin Li (UC Berkeley)</li>
 				  <li>Darryl Seligman (Cornell)</li>
 				  <li>Lynda Sovocool (Cornell)</li>
+				  <li>Yubo Su (Princeton)</li>
 				</ul>
 			    
 			  </div>
 			</section>
 
+			<section id="logistics" class="wrapper style2 fade-up">
+			   <div class="inner">
+				<h2>Logistics</h2>
+				<h3>Getting here</h3>
+				<p>Information about traveling to Cornell can be found <a href="https://international.globallearning.cornell.edu/getting-started/travel-campus">here</a>.</p>
+			   	<h3>Staying here</h3>
+				<p>Coming soon.</p>
+			   </div>
+			</section>
+
 			<!-- Frequently Asked Questions -->
-			<section id="faq" class="wrapper style2 fade-up">
+			<section id="faq" class="wrapper style2-alt fade-up">
 			  <div class="inner">
 			    <h2>Frequently Asked Questions</h2>
 			    	<h3>I don't study exoplanets. Can I participate in ERES?</h3>
@@ -131,7 +142,7 @@
 			</section>
 
 			<!-- Frequently Asked Questions -->
-			<section id="acknowledgements" class="wrapper style2-alt fade-up">
+			<section id="acknowledgements" class="wrapper style2 fade-up">
 			  <div class="inner">
 			    <h2>Acknowledgements</h2>
 				<!--<h3>Support for ERES IX</h3>-->
@@ -158,7 +169,7 @@
 	<body class="is-preload">
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper style2-alt">
+			<footer id="footer" class="wrapper style2">
 				<div class="inner">
 					<ul class="menu">
 						<li>Chris O'Connor and Rixin Li, 2024 February 17. Last updated 2024 Feb 26.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
