Updated OC list

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 				  <li>L&#237;gia F. Coelho (Cornell)</li>
 				  <li>Trevor Foote (Cornell)</li>
 				  <li>Veronica Hegelein (Cornell)</li>
-				  <li>Lisa Kaltenegger (Cornell)</li>
+				  <!--<li>Lisa Kaltenegger (Cornell)</li>-->
 				  <li>Maura Lally (Cornell)</li>
 				  <li>Adam Langeveld (Cornell)</li>
 				  <li>JT Laune (Cornell)</li>
 				  <li>Garrett Levine (Yale; past LOC chair)</li>
-				  <li>Nikole Lewis (Cornell)</li>
+				  <!--<li>Nikole Lewis (Cornell)</li>-->
 				  <li>Rixin Li (UC Berkeley)</li>
 				  <li>Darryl Seligman (Cornell)</li>
-				  <li>Lynda Sovocool (Cornell)</li>
+				  <!--<li>Lynda Sovocool (Cornell)</li>-->
 				  <li>Yubo Su (Princeton)</li>
 				</ul>
 			    
