Ended open registration

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 						  <a href="#intro" class="scrolly">Welcome</a>
 						</li>
 						<li>
-						  <a href="https://forms.gle/bGfYwuWLUb8isiVH6" class="scrolly">Register</a>
+							<a href="#intro" class="scrolly">Register</a>
+							<!--<a href="https://forms.gle/bGfYwuWLUb8isiVH6" class="scrolly">Register</a>--
 						</li>
 						<li>
 						  <a href="#about" class="scrolly">About</a>
@@ -51,15 +52,15 @@
 			    <h2>Cornell University, Ithaca, New York</h2>
 			    <h2>2024 July 10-12</h2>
 			    <br>
-			    <h3>Registration and abstract submission open through April 12.</h3>
-			    <ul class="actions">
+			    <h3>Registration has concluded. We hope to see you in July!</h3>
+			    <!--<ul class="actions">-->
 				<!--<li>
 				  <a href="#logistics" class="button scrolly"> Logistics</a>
 				</li>-->
-				<li>
+				<!--<li>
 				  <a href="https://forms.gle/bGfYwuWLUb8isiVH6" class="button scrolly">Register Now!</a>
-				</li>
-			    </ul>
+				</li>-->
+			    <!--</ul>-->
 			    <!--<span class="image fit">
 				<img src="images/eres-participants.jpg" style="height: 38%; width: 38%; object-fit: contain" alt="Participants at a previous ERES conference.">
 			    </span>-->
@@ -145,7 +146,10 @@
 			<section id="acknowledgements" class="wrapper style2 fade-up">
 			  <div class="inner">
 			    <h2>Acknowledgements</h2>
-				<!--<h3>Support for ERES IX</h3>-->
+				<!--<h3>Financial Support for ERES IX</h3>-->
+				<!--ERES IX is primarily sponsored by a grant from the Heising-Simons Foundation, 
+	    			with additional funding from the Carl Sagan Institute, the Cornell Department of Astronomy, 
+				and the Cornell Center for Astrophysics and Planetary Science. -->
 				<!--<h3>Land Acknowledgement</h3>-->
 				<p>
 				Cornell University is located on the traditional homelands 
