RL: add code of conduct page; add OC update

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 						<li>
 						  <a href="#acknowledgements" class="scrolly">Acknowledgements</a>
 						</li>
+						<li>
+							<a href="#coc" class="scrolly">Conduct</a>
+						  <!-- <a href="eres-coc.html" class="scrolly">Code of Conduct</a> -->
+						</li>
 					</ul>
 				</nav>
 			</div>
@@ -53,6 +57,18 @@
 			    <h2>2024 July 10-12</h2>
 			    <br>
 			    <h3>Registration has concluded. We hope to see you in July!</h3>
+					<hr style="width: 67%; height: 2px; background-color: white; border: none;">
+					<h2><b>Update from Organizing Committee on May 10th, 2024:</b></h2>
+					<br>
+					<span style="background-color:rgba(0, 0, 0, 0.4);color:white;font-size:20px;line-height:1.4;max-width:1080px;display:block;text-align:justify;">
+						<p style="margin-bottom:8px;">Dear ERES IX registrants,</p>
+					  <p style="margin-bottom:5px;text-indent:2em;">We have received nearly 130 presentation abstracts and are currently reviewing them. You may expect notification of the status of your abstract during the week of May 20th-24th. At that time, we will also send additional information about conference logistics and a form to confirm your participation. We appreciate your patience in the meantime.</p>
+						<p style="margin-bottom:5px;text-indent:2em;">Furthermore, we have begun planning other activities during the conference, including panel discussions, a catered banquet, and a trivia night! More information will be posted on this website in due course.</p>
+					  <p style="margin-bottom:8px;text-indent:2em;">We can't wait to see you at ERES IX!</p>
+						<p style="margin-bottom:4px;">Regards,</p>
+					  <p style="margin-bottom:4px;">The ERES IX Organizing Committee</p>
+					</span>
+
 			    <!--<ul class="actions">-->
 				<!--<li>
 				  <a href="#logistics" class="button scrolly"> Logistics</a>
@@ -165,8 +181,16 @@
 			    
 			  </div>
 			</section>
-		</div>
+			
+			<!-- code of conduct -->
+			<section id="coc" class="wrapper style2-alt fade-up">
+				<div class="inner">
+					<h2>Code of Conduct</h2>
+					<p>ERES 2024 is dedicated to fostering a professional environment that values respect, equal opportunity, and fair treatment for all participants. Please see our Code of Conduct page <a href="eres-coc.html"><b>here</b></a>.
+				</div>
+			</section>
 
+		</div>
 
 	</body>
 
