Updated OC list

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 				  <li>Darryl Seligman (Cornell)</li>
 				  <!--<li>Lynda Sovocool (Cornell)</li>-->
 				  <li>Yubo Su (Princeton)</li>
+				  <li>Jake Turner (Cornell)</li>
 				</ul>
 			    
 			  </div>
