Added sponsorship acknowledgement

--- a/index.html
+++ b/index.html
@@ -163,11 +163,12 @@
 			<section id="acknowledgements" class="wrapper style2 fade-up">
 			  <div class="inner">
 			    <h2>Acknowledgements</h2>
-				<!--<h3>Financial Support for ERES IX</h3>-->
-				<!--ERES IX is primarily sponsored by a grant from the Heising-Simons Foundation, 
+				<h3>Sponsors</h3>
+				ERES IX is primarily sponsored by a grant from the Heising-Simons Foundation, 
 	    			with additional funding from the Carl Sagan Institute, the Cornell Department of Astronomy, 
-				and the Cornell Center for Astrophysics and Planetary Science. -->
-				<!--<h3>Land Acknowledgement</h3>-->
+				and the Cornell Center for Astrophysics and Planetary Science.
+				
+				<h3>Land Acknowledgement</h3>
 				<p>
 				Cornell University is located on the traditional homelands 
 				of the Gayogo&#817;h&#243;:no&#808;<sup>&#660;</sup> (Cayuga Nation). 
