--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 						  <a href="#intro" class="scrolly">Welcome</a>
 						</li>
 						<li>
-							<a href="#intro" class="scrolly">Register</a>
-							<!--<a href="https://forms.gle/bGfYwuWLUb8isiVH6" class="scrolly">Register</a>--
+							<a href="#program" class="scrolly">Program</a>
+							<!--<a href="#about" class="scrolly">Register</a>-->
+							<!--<a href="https://forms.gle/bGfYwuWLUb8isiVH6" class="scrolly">Register</a>-->
 						</li>
 						<li>
-						  <a href="#about" class="scrolly">About</a>
+						  <a href="#panel" class="scrolly">Panels</a>
 						</li>
 						<!--<li>
 						  <a href="#logistics" class="scrolly">Logistics</a>
@@ -56,19 +57,7 @@
 			    <h2>Cornell University, Ithaca, New York</h2>
 			    <h2>2024 July 10-12</h2>
 			    <br>
-			    <h3>Registration has concluded. We hope to see you in July!</h3>
-					<hr style="width: 67%; height: 2px; background-color: white; border: none;">
-					<h2><b>Update from Organizing Committee on May 10th, 2024:</b></h2>
-					<br>
-					<span style="background-color:rgba(0, 0, 0, 0.4);color:white;font-size:20px;line-height:1.4;max-width:1080px;display:block;text-align:justify;">
-						<p style="margin-bottom:8px;">Dear ERES IX registrants,</p>
-					  <p style="margin-bottom:5px;text-indent:2em;">We have received nearly 130 presentation abstracts and are currently reviewing them. You may expect notification of the status of your abstract during the week of May 20th-24th. At that time, we will also send additional information about conference logistics and a form to confirm your participation. We appreciate your patience in the meantime.</p>
-						<p style="margin-bottom:5px;text-indent:2em;">Furthermore, we have begun planning other activities during the conference, including panel discussions, a catered banquet, and a trivia night! More information will be posted on this website in due course.</p>
-					  <p style="margin-bottom:8px;text-indent:2em;">We can't wait to see you at ERES IX!</p>
-						<p style="margin-bottom:4px;">Regards,</p>
-					  <p style="margin-bottom:4px;">The ERES IX Organizing Committee</p>
-					</span>
-
+			    <h2>We look forward to welcoming you!</h2>
 			    <!--<ul class="actions">-->
 				<!--<li>
 				  <a href="#logistics" class="button scrolly"> Logistics</a>
@@ -81,10 +70,38 @@
 				<img src="images/eres-participants.jpg" style="height: 38%; width: 38%; object-fit: contain" alt="Participants at a previous ERES conference.">
 			    </span>-->
 			  </div>
-			  <div class="inner" style="position:relative;bottom:0;padding-bottom:0px;">
+			  <div class="inner" style="position:relative;bottom:-40px;padding-bottom:0px;">
 			  Background Image: Dantes De MonteCristo, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=64060636">Link</a>
 			  </div>
 			</section>
+
+			<section id="program" class="wrapper style2-alt fade-up">
+				<div class="inner">
+			    <h2>Current Program</h2>
+					<p style="font-size:28px;margin-bottom:1em;">The latest block schedule and lists of sessions/talks/posters can be found <a href="https://docs.google.com/spreadsheets/d/1WmAhrB356vjgHMmlWYhwkYQFDOq8ZEzy/edit?usp=sharing&ouid=115076196709422765520&rtpof=true&sd=true"><b>here</b></a>.</p>
+					<p style="font-size:28px">The latest abstract book can be found <a href="./assets/ERES_IX_Abstract_Book_v1.pdf"><b>here</b></a>.</p>
+
+					<p style="font-size:28px;">This <a href="https://maps.app.goo.gl/NkMQFELP7kuRK8fYA"><b>interactive map</b></a> lists all the relevant ERES IX locations in the campus.</p>
+				</div>
+			</section>
+
+			<section id="panel" class="wrapper style2 fade-up">
+				<div class="inner">
+			    <h2>Panels</h2>
+					<p>
+						We will hold two panels at noon on Wednesday, July 10th, and Thursday, July 11th, respectively.
+					</p>
+					<h3>Panel 1 features local Cornell faculty (joint with <a href="https://smds.cornell.edu/">SMDS</a>).</h3>
+
+					<h3>Panel 2 is about "Career Q&A" and features the following invited panelist:</h3>
+					<ul style="font-size:24px;font-weight:bold;">
+						<li><a href="https://www.mikinakajima.com/">Dr. Miki Nakajima</a></li>
+						<li><a href="https://ael.gsfc.nasa.gov/cisto/bio/benjamin.j.hord">Dr. Ben Hord</a></li>
+						<li><a href="https://lilylingzhao.github.io/">Dr. Lily L. Zhao</a></li>
+					</ul>
+				</div>
+			</section>
+
 			<section id="about" class="wrapper style2-alt fade-up">
 			  <div class="inner">
 			    <h2>About ERES</h2>
@@ -127,7 +144,7 @@
 				<h3>Getting here</h3>
 				<p>Information about traveling to Cornell can be found <a href="https://international.globallearning.cornell.edu/getting-started/travel-campus">here</a>.</p>
 			   	<h3>Staying here</h3>
-				<p>Coming soon.</p>
+				<p>Check out this <a href="https://maps.app.goo.gl/NkMQFELP7kuRK8fYA"><b>interactive map</b></a> for all the relevant ERES IX locations in the Cornell campus. More Information coming soon. </p>
 			   </div>
 			</section>
 
