updated abstract book

--- a/eres-coc.html
+++ b/eres-coc.html
@@ -73,7 +73,9 @@
         
         <h2>Virtual Interactions</h2>
         <p>This code of conduct extends to virtual interactions on the conference’s Slack workspace and other online platforms. Participants should maintain a respectful and professional environment, use appropriate language, follow channel guidelines, maintain confidentiality, be collaborative, and report inappropriate behavior.</p>
-        
+
+	<!--<p>The Slack workspace is intended for communication directly related to ERES. Irrelevant posts will be deleted at the discretion of the OC.</p>-->
+
         <h2>Reporting Misconduct</h2>
         <p>Any breaches of the code of conduct should be reported promptly. ERES 2024 takes such reports seriously and will address them appropriately, which may include warnings, removal from the conference, or other actions.</p>
         <p>To report an incident, <!-- please contact <b>Member X</b> at <b>address@email.com</b>, either in person, via email, or on Slack. You--> you may reach out to any member of the organizing committee, either in person, via email, or on Slack. <!-- Alternatively, you may also use this <b>anonymized form</b>--> </p>
