--- a/index.html
+++ b/index.html
@@ -112,7 +112,15 @@
                 </p>
                 <h3>ERES X Organizers</h3>
                 <ul>
-                  <li>TBA</li>
+                  <li>Yubo Su (Princeton; LOC chair)</li>
+                  <li>Caleb Lammers (Princeton; SOC chair)</li>
+                  <li>Roberto Tejada Arevalo (Princeton)</li>
+                  <li>Eritas Yang (Princeton)</li>
+                  <li>Akash Gupta (Princeton)</li>
+                  <li>Ankan Sur (Princeton)</li>
+                  <li>Joshua Winn (Princeton)</li>
+                  <li>Chris O&#8217;Connor (CIERA; past LOC chair)</li>
+                  <li>Aster G. Taylor (University of Michigan)</li>
                 </ul>
 
               </div>
