--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
     <head>
-        <title>ERES IX Symposium</title>
+        <title>ERES X Symposium</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -134,7 +134,7 @@
                 <!-- <p>Information about traveling to Princeton can be found <a href="https://international.globallearning.cornell.edu/getting-started/travel-campus">here</a>.</p> -->
                 <h3>Staying here</h3>
                 <p>Coming soon </p>
-                <!-- <p>Check out this <a href="https://maps.app.goo.gl/NkMQFELP7kuRK8fYA"><b>interactive map</b></a> for all the relevant ERES IX locations in the Cornell campus. More Information coming soon. </p> -->
+                <!-- <p>Check out this <a href="https://maps.app.goo.gl/NkMQFELP7kuRK8fYA"><b>interactive map</b></a> for all the relevant ERES X locations in the Cornell campus. More Information coming soon. </p> -->
                </div>
             </section>
 
@@ -152,7 +152,7 @@
                 <p>No. Registration and abstract submission is free of charge for all participants.</p>
 
                 <h3>Is there a virtual/remote attendance option?</h3>
-                <p>No. ERES IX will be a fully in-person event. </p>
+                <p>No. ERES X will be a fully in-person event. </p>
 
                 <h3>How many slots are there for oral presentations? What about poster presentations?</h3>
                 <p>The SOC will decide the number of talks on the schedule after abstracts have been received, sorted, and reviewed. We anticipate that everyone who submits a reasonable, relevant abstract will be offered an opportunity to present at the conference.</p>
