added dates and tentative registration form

--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@
             <section id="registration" class="wrapper style2-alt fade-up">
                 <div class="inner">
                 <h2>Registration &amp; Important Dates</h2>
-                Coming Soon!
+                Register at this link:
+                <a href=https://forms.gle/WgU8prvheMqi6URo9>https://forms.gle/WgU8prvheMqi6URo9</a>
+                <br>
+
+                <h3>Important dates:</h3>
+                <ul>
+                  <li>Apr 4: Abstract submission deadline</li>
+                  <li>Apr 18: Acceptance notifications and confirmations</li>
+                  <li>June 16-17: Conference!</li>
+                </ul>
                 </div>
             </section>
 
