--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                   <li>Ankan Sur (Princeton)</li>
                   <li>Joshua Winn (Princeton)</li>
                   <li>Chris O&#8217;Connor (CIERA; past LOC chair)</li>
+                  <li>Garrett Levine (Yale; past LOC chair)</li>
                   <li>Aster G. Taylor (University of Michigan)</li>
                 </ul>
 
