--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 <ul>
                   <li>Caleb Lammers (Princeton; SOC chair)</li>
                   <li>Roberto Tejada Arevalo (Princeton)</li>
+                  <li>Yixian Chen (Princeton)</li>
                   <li>Eritas Yang (Princeton)</li>
                   <li>Yubo Su (Princeton; LOC chair)</li>
                   <li>Akash Gupta (Princeton)</li>
