added some logistics info

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-    Hyperspace by HTML5 UP
-    html5up.net | @ajlkn
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    If you're reading this source code, Yubo says hi! :)
 -->
 <html>
     <head>
@@ -141,11 +139,66 @@
                <div class="inner">
                 <h2>Logistics</h2>
                 <h3>Getting here</h3>
-                <p>Coming soon.</p>
+                First, get to Princeton Junction:
+                <ul>
+                    <li>
+                    For those taking the train, Amtrak stops at Princeton Junction.
+                    </li>
+
+                    <li>
+                    For all other modes of transportation, it is hopefully helpful
+                    to know that NJ Transit runs from Penn Station, NY to Princeton
+                    Junction.
+                    </li>
+
+                    <li>
+                    For those flying, Newark Liberty International Airport is
+                    connected to Princeton Junction via NJ Transit (follow signs for
+                    "Airtrain").
+                    </li>
+                </ul>
+                <p>
+                Once you get to Princeton Junction, take the "Dinky" to
+                Princeton Station, which is then a 5-10 minute walk from
+                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
+                    Bloomberg Hall</a>,
+                where we will house most attendees.
+                </p>
+
+                <p>
+                More information may eventually come...
+                </p>
                 <!-- <p>Information about traveling to Princeton can be found <a href="https://international.globallearning.cornell.edu/getting-started/travel-campus">here</a>.</p> -->
                 <h3>Staying here</h3>
-                <p>Coming soon </p>
-                <!-- <p>Check out this <a href="https://maps.app.goo.gl/NkMQFELP7kuRK8fYA"><b>interactive map</b></a> for all the relevant ERES X locations in the Cornell campus. More Information coming soon. </p> -->
+                <p>
+                For those provided housing support, you will be housed at
+                <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
+                    Bloomberg Hall</a>.
+                </p>
+
+                <p>
+                For those independently traveling,
+                <a href=https://maps.app.goo.gl/h7qXimAShfm1dPi47>
+                    Nassau Inn</a>
+                and the
+                <a href=https://maps.app.goo.gl/AshWtvg3pwPr7CPN9>
+                    Graduate Hotel</a>
+                are pricier options that are walking distance from the
+                conference venue at
+                <a href=https://maps.app.goo.gl/FwBAMDtrcPsGQEKH7>
+                    Jadwin Hall</a>.
+                Other hotels that are somewhat further are located on Highway 1
+                (~ 40 minute walk, driving encouraged):
+                <a href=https://maps.app.goo.gl/ynLdju1SmAKH7ejd8>Courtyard
+                    Princeton</a>
+                and
+                <a href=https://maps.app.goo.gl/AfiJ8pSkNLh644sAA>
+                Homewood Suites</a>.
+                </p>
+                <p>Parking will be avaliable, details to come.</p>
+                <p>
+                More information may eventually come...
+                </p>
                </div>
             </section>
 
@@ -154,22 +207,55 @@
               <div class="inner">
                 <h2>Frequently Asked Questions</h2>
                     <h3>I don't study exoplanets. Can I participate in ERES?</h3>
-                <p>ERES is open to all early-career scientists, researchers, and students working on anything related to planets and planetary systems, broadly construed. In addition to exoplanets, relevant areas of research may include (but are not limited to) star and planet formation and evolution (including disks); stellar astrophysics; planetary science and Solar System exploration; astrobiology and the search for life beyond Earth; geological, oceanic, and atmospheric sciences; celestial mechanics and astrodynamics; and aerospace engineering. </p>
+                <p>ERES is open to all early-career scientists, researchers, and
+                students working on anything related to planets and planetary
+                systems, broadly construed. In addition to exoplanets, relevant
+                areas of research may include (but are not limited to) star and
+                planet formation and evolution (including disks); stellar
+                astrophysics; planetary science and Solar System exploration;
+                astrobiology and the search for life beyond Earth; geological,
+                oceanic, and atmospheric sciences; celestial mechanics and
+                astrodynamics; and aerospace engineering. </p>
 
                 <h3>Can I register/participate without submitting an abstract?</h3>
-                <p>Yes. However, we strongly encourage submitting an abstract if you can. We may not be able to provide lodgings or travel support for participants who do not submit abstracts.</p>
-
-                <h3>Is there a registration or abstract submission fee?</h3>
-                <p>No. Registration and abstract submission is free of charge for all participants.</p>
+                <p>Yes. However, we strongly encourage submitting an abstract if
+                you can. We will not be able to provide lodgings or travel
+                support for participants who do not submit abstracts.</p>
 
                 <h3>Is there a virtual/remote attendance option?</h3>
                 <p>No. ERES X will be a fully in-person event. </p>
 
                 <h3>How many slots are there for oral presentations? What about poster presentations?</h3>
-                <p>The SOC will decide the number of talks on the schedule after abstracts have been received, sorted, and reviewed. We anticipate that everyone who submits a reasonable, relevant abstract will be offered an opportunity to present at the conference.</p>
+                <p>The SOC will decide the number of talks on the schedule after
+                abstracts have been received, sorted, and reviewed. We
+                anticipate that everyone who submits a reasonable, relevant
+                abstract will be offered an opportunity to present at the
+                conference.</p>
+
+                <h3>What will be the costs of attending?</h3>
+                <p>Due to the unprecedented current fiscal situation in the US,
+                ERES X is working with a limited budget compared to previous
+                years. Nevertheless, we have made every effort to ensure that
+                participants are supported as much as possible.
+                </p>
+                <p>
+                Our tentative financial plan is as follows:
+                Registration and abstract submission is free of charge for all
+                participants.
+                Breakfast and lunch will be catered by Princeton Campus Dining
+                at no cost to attendees.
+                We currently expect to ask attendees to organize their own
+                dinners (options on campus start around $10-$20).
+                Housing financial support will be limited and prioritized for
+                researchers otherwise unable to attend.
+                Travel support is currently outside the scope of our budget.
+                </p>
 
                 <h3>How do you pronouce ERES?</h3>
-                <p>We are going with the pronunciation "EE-rez" (IPA spelling: /'ir&#603;z/). Some of us who were around for ERES V in 2019 remember it being pronounced "AIR-eez" (/&#603;&#601;ri:z/, like the name "Ares").
+                <p>We are going with the pronunciation "EE-rez" (IPA spelling:
+                /'ir&#603;z/). Some of us who were around for ERES V in 2019
+                remember it being pronounced "AIR-eez" (/&#603;&#601;ri:z/, like
+                the name "Ares").</p>
 
 
                 <h2>Other Questions?</h2>
@@ -185,21 +271,6 @@
                 ERES X is funded by generous contributions from the Princeton
                 Department of Astrophysical Sciences, the Princeton Department
                 of Geophysical Sciences, and the Institute for Advanced Study.
-
-                <h3>Land Acknowledgement</h3>
-                <p>
-                Maybe?
-                <!-- Cornell University is located on the traditional homelands -->
-                <!-- of the Gayogo&#817;h&#243;:no&#808;<sup>&#660;</sup> (Cayuga Nation). -->
-                <!-- The Gayogo&#817;h&#243;:no&#808;<sup>&#660;</sup> are members -->
-                <!-- of the Hodino&#808;&#817;hs&#243;&#808;:nih (Haudenosaunee) Confederacy, -->
-                <!-- an alliance of six sovereign nations with a historic and contemporary presence on this land. -->
-                <!-- The confederacy precedes the establishment of Cornell University, New York state, and the United States of America. -->
-                <!-- We acknowledge the painful history of Gayogo&#817;h&#243;:no&#808;<sup>&#660;</sup> disposession -->
-                <!-- and honor the ongoing connection of Gayogo&#817;h&#243;:no&#808;<sup>&#660;</sup> people, -->
-                <!-- past and present, to these lands and waters. -->
-                </p>
-
               </div>
             </section>
 
@@ -207,7 +278,7 @@
             <section id="coc" class="wrapper style2 fade-up">
                 <div class="inner">
                     <h2>Code of Conduct</h2>
-                    <p>ERES 2025 is dedicated to fostering a professional environment that values respect, equal opportunity, and fair treatment for all participants. Please see our Code of Conduct page <a href="eres-coc.html"><b>here</b></a>.
+                    ERES 2025 is dedicated to fostering a professional environment that values respect, equal opportunity, and fair treatment for all participants. Please see our Code of Conduct page <a href="eres-coc.html"><b>here</b></a>.
                 </div>
             </section>
 
