--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                                 Registration &amp; Important Dates
                             </a>
                         </li>
+                        <!-- <li> -->
+                        <!--     <a href="#program" class="scrolly">Program</a> -->
+                        <!-- </li> -->
                         <li>
-                            <a href="#program" class="scrolly">Program</a>
-                        </li>
-                        <!--<li>
-                          <a href="#panel" class="scrolly">Panels</a>
+                          <a href="#about" class="scrolly">About</a>
                         </li>
                         <li>
                           <a href="#logistics" class="scrolly">Logistics</a>
-                        </li>-->
+                        </li>
                         <li>
                           <a href="#faq" class="scrolly">FAQ</a>
                         </li>
