rm soon to be finalized blurb

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="inner" style="padding-bottom:100px;">
                 <h1>Emerging Researchers in Exoplanet Science Symposium X</h1>
                 <h2>Princeton University, Princeton, New Jersey</h2>
-                <h2>2025 June 16-17 (soon to be finalized)</h2>
+                <h2>2025 June 16-17</h2>
                 <br>
                 <h3>We apologize for the long delay and look forward to welcoming you!</h3>
               </div>
@@ -173,7 +173,7 @@
                 <p>
                 For those provided housing support, you will be housed at
                 <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
-                    Bloomberg Hall</a>.
+                    Bloomberg Hall</a> for up to two nights, June 15 and 16.
                 </p>
 
                 <p>
