--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                   <li>Roberto Tejada Arevalo (Princeton)</li>
                   <li>Yixian Chen (Princeton)</li>
                   <li>Eritas Yang (Princeton)</li>
+                  <li>Chris O&#8217;Connor (CIERA; past SOC chair)</li>
+                  <li>Garrett Levine (Yale; past SOC chair)</li>
+                  <li>Aster G. Taylor (University of Michigan; future SOC chair)</li>
                   <li>Yubo Su (Princeton; LOC chair)</li>
                   <li>Akash Gupta (Princeton)</li>
                   <li>Ankan Sur (Princeton)</li>
                   <li>Joshua Winn (Princeton)</li>
-                  <li>Chris O&#8217;Connor (CIERA; past LOC chair)</li>
-                  <li>Garrett Levine (Yale; past LOC chair)</li>
-                  <li>Aster G. Taylor (University of Michigan)</li>
                 </ul>
 
               </div>
