--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 For those provided housing support, you will be housed at
                 <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
                     Bloomberg Hall</a> for up to two nights, June 15 and 16.
+                We are currently expecting to book guests at single occupancy.
                 </p>
 
                 <p>
