--- a/index.html
+++ b/index.html
@@ -73,10 +73,17 @@
 
                 <h3>Important dates:</h3>
                 <ul>
-                  <li>Apr 4: Abstract submission deadline</li>
-                  <li>Apr 18: Acceptance notifications and confirmations</li>
+                  <li>Apr 11 (extended!): Abstract submission deadline*</li>
+                  <!-- <li>Apr 25: Late abstract submission deadline*</li> -->
+                  <li>May 2: Acceptance notifications and confirmations</li>
                   <li>June 16-17: Conference!</li>
                 </ul>
+                * - While we will prioritize funding for registrants who submit
+                abstracts prior to the deadline, we are happy to welcome
+                abstracts through May 2 and will try to accommodate even later
+                abstract submissions as resources allow. Please email
+                "eresorganizers [at] gmail {dot} com" with questions and
+                requests.
                 </div>
             </section>
 
