--- a/index.html
+++ b/index.html
@@ -90,7 +90,29 @@
             <section id="program" class="wrapper style2 fade-up">
                 <div class="inner">
                 <h2>Current Program</h2>
-                    TBD
+                The current tentative block schedule (as of 4/25) is:
+                <h3>Monday (6/16)</h3>
+                <ul>
+                    <li> 8-9 Breakfast </li>
+                    <li> 9-1015 Talk session 1 </li>
+                    <li> 1015-1045 Coffee break </li>
+                    <li> 1045-12 Talk session 2 </li>
+                    <li> 12-130 Mentoring event / lunch (provided) </li>
+                    <li> 130-245 Talk session 3 </li>
+                    <li> 245-345 Poster session + coffee </li>
+                    <li> 345-500 Talk session 4 </li>
+                    <li> 5 Dinner (on your own) </li>
+                </ul>
+                <h3>Tuesday (6/17)</h3>
+                <ul>
+                    <li> 8-9 Breakfast </li>
+                    <li> 9-1015 Talk session 5 </li>
+                    <li> 1015-1045 Coffee break </li>
+                    <li> 1045-12 Talk session 6 </li>
+                    <li> 12-130 Lunch </li>
+                    <li> 130-245 Tentative talk session 7, TBD </li>
+                </ul>
+                Detailed schedule will arrive mid-May.
                 </div>
             </section>
 
