update to show that we're full

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
                 <h3>Important dates:</h3>
                 <ul>
                   <li>Apr 11 (extended!): Abstract submission deadline*</li>
-                  <!-- <li>Apr 25: Late abstract submission deadline*</li> -->
                   <li>May 2: Acceptance notifications and confirmations</li>
                   <li>June 16-17: Conference!</li>
                 </ul>
@@ -84,6 +83,11 @@
                 abstract submissions as resources allow. Please email
                 "eresorganizers [at] gmail {dot} com" with questions and
                 requests.
+
+                ** - As of May 19, 2025, we are currently fully booked for talks
+                and for housing! However, we are happy to accept posters from
+                attendees on a case-by-case basis. We expect to have schedules
+                for talks assigned within one week.
                 </div>
             </section>
 
