post ERES schedule

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
             <section id="registration" class="wrapper style2-alt fade-up">
                 <div class="inner">
                 <h2>Registration &amp; Important Dates</h2>
-                Register at this link:
-                <a href=https://forms.gle/WgU8prvheMqi6URo9>https://forms.gle/WgU8prvheMqi6URo9</a>
+                <!-- Register at this link: -->
+                <!-- <a href=https://forms.gle/WgU8prvheMqi6URo9>https://forms.gle/WgU8prvheMqi6URo9</a> -->
+                Registration is now closed.
                 <br>
 
                 <h3>Important dates:</h3>
@@ -82,7 +83,7 @@
                 abstracts through May 2 and will try to accommodate even later
                 abstract submissions as resources allow. Please email
                 "eresorganizers [at] gmail {dot} com" with questions and
-                requests.
+                requests.<br>
 
                 ** - As of May 19, 2025, we are currently fully booked for talks
                 and for housing! However, we are happy to accept posters from
@@ -94,7 +95,12 @@
             <section id="program" class="wrapper style2 fade-up">
                 <div class="inner">
                 <h2>Current Program</h2>
-                The current tentative block schedule (as of 4/25) is:
+                <h4>
+                Talk assignments are at <a
+                                                href="https://docs.google.com/spreadsheets/d/1enZiM-_JRdshToyB1YXf3TBiS55jeB7Lr7o2jx22mVg/edit?usp=sharing">
+                    this link</a>. Please let us know if you see any
+            mistakes!</h4>
+                The block schedule is as below:
                 <h3>Monday (6/16)</h3>
                 <ul>
                     <li> 8-9 Breakfast </li>
@@ -105,7 +111,7 @@
                     <li> 130-245 Talk session 3 </li>
                     <li> 245-345 Poster session + coffee </li>
                     <li> 345-500 Talk session 4 </li>
-                    <li> 5 Dinner (on your own) </li>
+                    <li> 5 Dinner (possibly provided, TBA) </li>
                 </ul>
                 <h3>Tuesday (6/17)</h3>
                 <ul>
@@ -113,17 +119,8 @@
                     <li> 9-1015 Talk session 5 </li>
                     <li> 1015-1045 Coffee break </li>
                     <li> 1045-12 Talk session 6 </li>
-                    <li> 12-130 Lunch </li>
-                    <li> 130-245 Tentative talk session 7, TBD </li>
+                    <li> 12-130 Lunch (provided) </li>
                 </ul>
-                Detailed schedule will arrive mid-May.
-                </div>
-            </section>
-
-            <section id="panel" class="wrapper style2-alt fade-up">
-                <div class="inner">
-                <h2>Panels</h2>
-                TBD
                 </div>
             </section>
 
@@ -171,6 +168,8 @@
             <section id="logistics" class="wrapper style2-alt fade-up">
                <div class="inner">
                 <h2>Logistics</h2>
+                Note that a more comprehensive packet containing this
+                information will be available by early June.
                 <h3>Getting here</h3>
                 First, get to Princeton Junction:
                 <ul>
@@ -190,6 +189,13 @@
                     "Airtrain").
                     </li>
                 </ul>
+
+                For those worried about the ongoing flight delays at Newark and
+                the recent strike at NJ Transit (which ended as of May 19), we
+                cannot provide official guidance. However, the Philadelphia
+                airport is only moderately more inconvenient than Newark
+                (requiring an additional transfer at Trenton) and is an
+                alternative option.
                 <p>
                 Once you get to Princeton Junction, take the "Dinky" to
                 Princeton Station, which is then a 5-10 minute walk from
@@ -197,17 +203,12 @@
                     Bloomberg Hall</a>,
                 where we will house most attendees.
                 </p>
-
-                <p>
-                More information may eventually come...
-                </p>
-                <!-- <p>Information about traveling to Princeton can be found <a href="https://international.globallearning.cornell.edu/getting-started/travel-campus">here</a>.</p> -->
                 <h3>Staying here</h3>
                 <p>
                 For those provided housing support, you will be housed at
                 <a href=https://maps.app.goo.gl/Az15inxHu1ToTZc18>
                     Bloomberg Hall</a> for up to two nights, June 15 and 16.
-                We are currently expecting to book guests at single occupancy.
+                Guests will be booked in single-occupancy rooms.
                 </p>
 
                 <p>
@@ -231,7 +232,8 @@
                 </p>
                 <p>Parking will be avaliable, details to come.</p>
                 <p>
-                More information may eventually come...
+                For other questions, please email the LOC at
+                eresorganizers [at] gmail {dot} com.
                 </p>
                </div>
             </section>
