fix alternating styling

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
             </section>
 
-            <section id="about" class="wrapper style2 fade-up">
+            <section id="about" class="wrapper style2-alt fade-up">
               <div class="inner">
                 <h2>About ERES</h2>
                 <p>
@@ -165,7 +165,7 @@
               </div>
             </section>
 
-            <section id="logistics" class="wrapper style2-alt fade-up">
+            <section id="logistics" class="wrapper style2 fade-up">
                <div class="inner">
                 <h2>Logistics</h2>
                 Note that a more comprehensive packet containing this
@@ -239,7 +239,7 @@
             </section>
 
             <!-- Frequently Asked Questions -->
-            <section id="faq" class="wrapper style2 fade-up">
+            <section id="faq" class="wrapper style2-alt fade-up">
               <div class="inner">
                 <h2>Frequently Asked Questions</h2>
                     <h3>I don't study exoplanets. Can I participate in ERES?</h3>
@@ -300,7 +300,7 @@
             </section>
 
             <!-- Frequently Asked Questions -->
-            <section id="acknowledgements" class="wrapper style2-alt fade-up">
+            <section id="acknowledgements" class="wrapper style2 fade-up">
               <div class="inner">
                 <h2>Acknowledgements</h2>
                 <h3>Sponsors</h3>
@@ -311,14 +311,14 @@
             </section>
 
             <!-- code of conduct -->
-            <section id="coc" class="wrapper style2 fade-up">
+            <section id="coc" class="wrapper style2-alt fade-up">
                 <div class="inner">
                     <h2>Code of Conduct</h2>
                     ERES 2025 is dedicated to fostering a professional environment that values respect, equal opportunity, and fair treatment for all participants. Please see our Code of Conduct page <a href="eres-coc.html"><b>here</b></a>.
                 </div>
             </section>
 
-            <section id="previous" class="wrapper style2-alt fade-up">
+            <section id="previous" class="wrapper style2 fade-up">
                 <div class="inner">
                     <h2>Previous ERES pages</h2>
                     <a href="index2024.html">Cornell 2024</a>
@@ -333,7 +333,7 @@
     <body class="is-preload">
 
         <!-- Footer -->
-            <footer id="footer" class="wrapper style2">
+            <footer id="footer" class="wrapper style2-alt">
                 <div class="inner">
                     <ul class="menu">
                         <li>Yubo Su, 2025 March 7. Last updated 2025 Mar 7.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
